--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,5 +30,6 @@
 @import 'modules/big-video';
 @import 'modules/additions';
 @import 'modules/video-slider';
+@import 'modules/contacts';
 
 @import 'pages/home';
