--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -1,12 +1,14 @@
 label{cursor: pointer;}
 
-.input-text {
+.input-text, .input-textarea {
 	display: inline-block;
 	width: 100%;
+	margin-bottom: 25px;
 	padding: 15px 25px;
 	font-family: $font;
-	font-size: 14px;
+	font-size: 12px;
 	line-height: 1.3;
+	text-transform: uppercase;
 	-webkit-appearance: none;
 	border: 1px solid #fff;
 	border-radius: 27px ;
@@ -23,8 +25,9 @@ label{cursor: pointer;}
 	}
 
 	@include placeholder {
-		font-size: 14px;
-		color: #A8A8A8;
+		font-size: 12px;
+		color: $text-color;
+		text-transform: uppercase;
 		opacity: 1;
 		transition: all 0.3s ease;
 	}
@@ -60,6 +63,21 @@ label{cursor: pointer;}
 			transition: all 0.3s ease;
 		}
 	}
+
+	&--half {
+		width: calc(50% - 12px);
+		@include res(xl) {
+			width: calc(50% - 10px);
+		}
+		@include res(xs) {
+			width: 100%;
+		}
+	}
+}
+
+.input-textarea {
+	min-height: 110px;
+	border-radius: 20px;
 }
 
 .form-subscribe {
@@ -109,6 +127,15 @@ label{cursor: pointer;}
 	}
 }
 
+.form-submit {
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-between;
+	@include res(xs) {
+		flex-direction: column;
+		align-items: center;
+	}
+}
 
 
 //style-checkbox
@@ -117,7 +144,11 @@ label{cursor: pointer;}
 	position: relative;
 	cursor: pointer;
 	margin-bottom: 15px;
-	font-size: 12px;
+	margin-right: 15px;
+	font-size: 13px;
+	@include res(xl) {
+		font-size: 12px;
+	}
 
 	input{
 		opacity: 0;
@@ -128,6 +159,10 @@ label{cursor: pointer;}
 		&:checked + span{
 			&:after{
 				opacity: 1;
+			}
+			&:before {
+				border-color: $pink;
+				background: $pink;
 			}
 		}
 
@@ -145,30 +180,37 @@ label{cursor: pointer;}
 
 		&:before{
 			content: '';
-			width: 20px;
-			height: 20px;
-			border: 2px solid #353434;
 			position: absolute;
 			left: 0;
 			top: 0;
+			width: 20px;
+			height: 20px;
+			border: 2px solid $pink;
+			border-radius: 50%;
 			transition: all 0.3s ease;
 		}
 
 		&:after{
 			content: '';
-			width: 20px;
-			height: 20px;
-			background: #353434;
 			position: absolute;
 			left: 0;
-			top: 0;
+			top: -3px;
+			width: 22px;
+			height: 22px;
+			background: #353434;
 			z-index: 2;
 			opacity: 0;
 			transition: opacity 0.3s ease;
+			background: url('../img/font-icons/done-checkbox.svg') no-repeat center center;
+			background-size: contain;
 		}
 
 		a{
-			color: #353434;
+			color: $light-blue;
+			transition: all 0.3s ease;
+			&:hover {
+				color: $pink;
+			}
 		}
 	}
 }
