--- a/sass/modules/_video-slider.scss
+++ b/sass/modules/_video-slider.scss
@@ -6,6 +6,20 @@
 	@include res(xl) {
 		padding-top: 540px;
 	}
+	@include res(l) {
+		min-height: 800px;
+		padding-top: 240px;
+		background: url("../img/video-slider/bg-video-slider-tablet.jpg") no-repeat bottom center, #f6f7fb;
+	}
+	@include res(m) {
+		min-height: initial;
+		padding-top: 80px;
+		background: #f6f7fb;
+	}
+	@include res(s) {
+		padding-top: 60px;
+		padding-bottom: $pad-s;
+	}
 }
 
 .video-slider {
@@ -13,6 +27,15 @@
 	text-align: center;
 	.btn-center {
 		padding-top: 70px;
+		@include res(l) {
+			padding-top: 80px;
+		}
+		@include res(m) {
+			padding-top: 40px;
+		}
+		@include res(xs) {
+			padding-top: 30px;
+		}
 	}
 }
 
@@ -22,8 +45,17 @@
 	left: 50%;
 	max-width: 600px;
 	transform: translate3d(-50%,0,0);
-	@include res(xl) {
-		margin-bottom: 70px;
+	@include res(l) {
+		top: -160px;
+	}
+	@include res(m) {
+		position: relative;
+		top: initial;
+		left: initial;
+		width: 100%;
+		max-width: 100%;
+		padding-bottom: $pad-s;
+		transform: translate3d(0,0,0);
 	}
 	.h2 {
 		margin-bottom: 0;
@@ -34,16 +66,42 @@
 	max-width: 550px;
 	margin: 0 auto;
 	color: #fff;
+	@include res(m) {
+		max-width: 100%;
+		width: 100%;
+		padding-left: $pad-l;
+		padding-right: $pad-l;
+	}
+	@include res(s) {
+		padding-left: $pad-m;
+		padding-right: $pad-m;
+	}
+	@include res(xs) {
+		padding-left: 0;
+		padding-right: 0;
+	}
 	.slider-next {
-		right: -150px;
+		right: -100px;
 		@include res(xl) {
-			right: -100px;
+			right: -80px;
+		}
+		@include res(m) {
+			right: 0;
+		}
+		@include res(xs) {
+			right: 5px;
 		}
 	}
 	.slider-prev {
-		left: -150px;
+		left: -100px;
 		@include res(xl) {
-			left: -100px;
+			left: -80px;
+		}
+		@include res(m) {
+			left: 0;
+		}
+		@include res(xs) {
+			left: 5px;
 		}
 	}
 }
@@ -51,11 +109,26 @@
 .video-slider__item {
 	position: relative;
 	max-width: 550px;
+	@include res(m) {
+		max-width: initial;
+		margin: 0 auto;
+	}
 	a {
 		display: block;
+		&:hover {
+			.video-play {
+				&:before {
+					transform: translate3d(-50%,-50%,0) scale(1.2) rotate(15deg);
+				}
+				&:after {
+					transform: translate3d(-50%,-50%,0) scale(0.85) rotate(10deg) skew(-20deg,0deg);
+				}
+			}
+		}
 		img {
 			display: block;
 			max-width: 100%;
+			margin: 0 auto;
 		}
 		.video-play {
 			position: absolute;
