--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,5 +31,6 @@
 @import 'modules/additions';
 @import 'modules/video-slider';
 @import 'modules/contacts';
+@import 'modules/about-us';
 
 @import 'pages/home';
