--- a/sass/modules/_contacts.scss
+++ b/sass/modules/_contacts.scss
@@ -11,15 +11,10 @@
 
 .contacts__wrap {
 	display: flex;
-	height: 700px;
 	margin-left: -$gutter;
 	margin-right: -$gutter;
-	@include res(xl) {
-		height: 660px;
-	}
 	@include res(m) {
 		flex-direction: column;
-		height: initial;
 	}
 	@include res(l) {
 		margin-left: -$gutter-mobile;
@@ -30,15 +25,19 @@
 .contacts__map {
 	position: relative;
 	width: 50%;
-	height: 100%;
+	min-height: 700px;
 	padding-left: $gutter;
 	padding-right: $gutter;
+	@include res(xl) {
+		min-height: 660px;
+	}
 	@include res(l) {
 		padding-left: $gutter-mobile;
 		padding-right: $gutter-mobile;
 	}
 	@include res(m) {
 		width: 100%;
+		min-height: initial;
 		height: 380px;
 		margin-bottom: 20px;
 	}
@@ -192,12 +191,12 @@
 
 .contacts__form {
 	width: 100%;
-	margin-top: $pad-m;
+	margin-top: 24px;
 	padding: 20px 25px;
 	color: #fff;
 	background: #2a2c3d;
 	@include res(xl) {
-		margin-top: $pad-s;
+		margin-top: 24px;
 		padding: 20px 20px;
 	}
 	@include res(l) {
