--- a/sass/modules/_video-slider.scss
+++ b/sass/modules/_video-slider.scss
@@ -80,6 +80,13 @@
 		padding-left: 0;
 		padding-right: 0;
 	}
+	.slick-list {
+		@include res(m) {
+			border: 4px solid #ccc;
+			border-radius: 5px;
+			box-shadow: 0 2px 6px 0 transparentize(#000, 0.5);
+		}
+	}
 	.slider-next {
 		right: -100px;
 		@include res(xl) {
@@ -108,13 +115,37 @@
 
 .video-slider__item {
 	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	max-width: 550px;
 	@include res(m) {
 		max-width: initial;
 		margin: 0 auto;
 	}
-	a {
+	&:after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: transparentize($text-color,0.6);
+		z-index: 1;
+	}
+	img {
+		position: relative;
 		display: block;
+		max-width: 100%;
+		margin: 0 auto;
+		z-index: 0;
+	}
+	a {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate3d(-50%,-50%,0);
+		z-index: 3;
 		&:hover {
 			.video-play {
 				&:before {
@@ -125,16 +156,8 @@
 				}
 			}
 		}
-		img {
-			display: block;
-			max-width: 100%;
-			margin: 0 auto;
-		}
 		.video-play {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate3d(-50%,-50%,0);
+
 		}
 	}
 }
