--- a/sass/modules/_waves.scss
+++ b/sass/modules/_waves.scss
@@ -97,3 +97,53 @@
 		}
 	}
 }
+
+.wave-gray-top {
+	position: relative;
+	&:before {
+		content: '';
+		position: absolute;
+		top: -78px;
+		left: 0;
+		right: 0;
+		width: 100%;
+		height: 79px;
+		background: url("../img/waves/top-gray.svg") no-repeat center bottom;
+		background-size: 100% auto;
+		pointer-events: none;
+		z-index: 1;
+		@include res(l) {
+			top: -49px;
+			height: 60px;
+		}
+		@include res(s) {
+			top: -27px;
+			height: 32px;
+		}
+	}
+}
+
+.wave-gray-bottom {
+	position: relative;
+	&:after {
+		content: '';
+		position: absolute;
+		bottom: -78px;
+		left: 0;
+		right: 0;
+		width: 100%;
+		height: 79px;
+		background: url("../img/waves/bottom-gray.svg") no-repeat center top;
+		background-size: 100% auto;
+		pointer-events: none;
+		z-index: 1;
+		@include res(l) {
+			bottom: -49px;
+			height: 60px;
+		}
+		@include res(s) {
+			bottom: -27px;
+			height: 32px;
+		}
+	}
+}
