--- a/sass/modules/_work-places.scss
+++ b/sass/modules/_work-places.scss
@@ -34,11 +34,27 @@
 	margin-bottom: $pad-s;
 	padding-left: $gutter;
 	padding-right: $gutter;
+	transition: all 0.5s ease;
+	opacity: 0;
+	transform: translate3d(0,50px,0);
 	@include res(s) {
 		width: 100%;
 		margin-bottom: $pad-xs;
 		padding-left: 0;
 		padding-right: 0;
+	}
+	&.animated {
+		opacity: 1;
+		transform: translate3d(0,0,0);
+	}
+	&--1 {
+		transition-delay: 0.1s;
+	}
+	&--2 {
+		transition-delay: 0.2s;
+	}
+	&--3 {
+		transition-delay: 0.3s;
 	}
 }
 
